Fixed a bug that would cause multiline bones to overlap.
Added some margin to the multiline bone so it does not overlap with the
element after it

--- a/src/partials/_text.scss
+++ b/src/partials/_text.scss
@@ -22,6 +22,7 @@
   }
 
   &.bone-multiline {
+    margin-bottom: 3em;
 
     &:before {
       // Import the shared properties and set the position.
